--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
+google-generativeai 
+langchain-google-genai
 streamlit
-google-generativeai
-faiss-cpu
-beautifulsoup4
-PyPDF2
 requests
-python-dotenv
+beautifulsoup4
 langchain
-numpy
-python-magic
-asyncio
-aiohttp
-docx2txt
+faiss-cpu
+langchain-community
+tiktoken
+python-dotenv
